[tool.poetry]
name = "excel2myfile"
version = "0.1.0"
description = ""
authors = ["crapStone <wewr.mc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
openpyxl = "^3.0"
pyyaml = "^5.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6"
flake8 = "^3.7"
black = {version = "^19.3b0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
